# profyl

./: .gitignore  pyproject.toml
src/profyl/: __init__.py  cache.py  daemon.py  data_source.py  error.py  server.py
src/profyl/abstractions/: cache.py  data_source.py
src/profyl/adapters/: __init__.py  cli.py  error.py  http.py  utils.py
src/profyl/caches/: redis.py  redis_cache.py
src/profyl/core/abstractions/: __init__.py  cache.py  data_source.py  registry.py
src/profyl/core/caches/: redis_cache.py
src/profyl/core/commands/: __init__.py  commands.py
src/profyl/core/data_sources/: __init__.py  excel.py  mongo.py  mongodb.py
src/profyl/core/registries/: __init__.py  dict_registry.py
src/profyl/data_sources/: excel.py  mongo.py  pandas_ds.py
src/profyl/manager/: manager.py
src/profyl/pipeline/: __init__.py  authentication.py  authorization.py  dispatch.py  project_scope.py
src/profyl/profiler/: server.py
