[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "profyl"
version = "0.1.0"
dependencies = [
    "pandas",
    "redis",
    "openpyxl",
    "mcp"
]
description = "MCP server that cleans and profiles your datasets"
license = "MIT"

[project.scripts]
profyl = "profyl.adapters.cli:cli"